--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,19 +6,16 @@
 </div>
 
 <div class="courses">
-
-  
-  <div class="course-card">
-    <div class="course-title">Angular Core Deep Dive</div>
-    <img
-      width="300"
-      alt="Angular Logo"
-      src="https://s3-us-west-1.amazonaws.com/angular-university/course-images/angular-core-in-depth-small.png"
-    />
-
-    <div class="course-description">
-      A detailed walk-through of the most important part of Angular - the Core
-      and Common modules.
-    </div>
-  </div>
+  <course-card
+    (courseSelected)="onCourseSelected($event)"
+    [course]="course1"
+  ></course-card>
+  <course-card
+    (courseSelected)="onCourseSelected($event)"
+    [course]="course2"
+  ></course-card>
+  <course-card
+    (courseSelected)="onCourseSelected($event)"
+    [course]="course3"
+  ></course-card>
 </div>
