--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,16 +6,20 @@
 </div>
 
 <div class="courses">
+  @for (course of courses; track course.id; let index = $index; let count =
+  $count; let first = $first; let last = $last; let even = $even; let odd =
+  $odd) {
+
   <course-card
     (courseSelected)="onCourseSelected($event)"
-    [course]="course1"
+    [course]="course"
+    [index]="index"
+    [class.is-first]="first"
+    [class.is-last]="last"
+    [class.is-even]="last"
+    [class.is-odd]="last"
   ></course-card>
-  <course-card
-    (courseSelected)="onCourseSelected($event)"
-    [course]="course2"
-  ></course-card>
-  <course-card
-    (courseSelected)="onCourseSelected($event)"
-    [course]="course3"
-  ></course-card>
+  } @empty {
+  <h1>No courses found</h1>
+  }
 </div>
