--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="courses">
-  @for (course of courses; track trackCourse; let index = $index; let count =
+  <!-- @for (course of courses; track trackCourse; let index = $index; let count =
   $count; let first = $first; let last = $last; let even = $even; let odd =
   $odd) {
 
@@ -21,5 +21,26 @@
   ></course-card>
   } @empty {
   <h1>No courses found</h1>
-  }
+
+
+
+  } -->
+
+  <course-card
+    *ngFor="
+      let course of courses;
+      index as i;
+      first as isFirst;
+      last as isLast;
+      even as isEven;
+      odd as isOdd
+    "
+    [class.is-first]="isFirst"
+    [class.is-last]="isLast"
+    [class.is-first]="isEven"
+    [class.is-first]="isOdd"
+    (courseSelected)="onCourseSelected($event)"
+    [course]="course"
+    [index]="i + 1"
+  ></course-card>
 </div>
