--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -1,12 +1,14 @@
 <div class="course-card">
   <div class="course-title">{{ index() }} : {{ course()?.description }}</div>
-  @if (course().id === 1) {
-  <p>Id 1 is detcted.</p>
-  } @else if (course().iconUrl){
-  <img width="300" alt="Angular Logo" [src]="course()?.iconUrl" />
-  } @else {
-  <p>No logo.</p>
-  }
+
+  <img
+    width="300"
+    alt="Angular Logo"
+    *ngIf="isIconUrl(); else noImage"
+    [src]="course()?.iconUrl"
+  />
+
+  <ng-template #noImage></ng-template>
 
   <div class="course-description">
     {{ course()?.longDescription }}
