--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="courses">
-  <!-- @for (course of courses; track trackCourse; let index = $index; let count =
+  <!-- @for (course of yycourses; track trackCourse; let index = $index; let count =
   $count; let first = $first; let last = $last; let even = $even; let odd =
   $odd) {
 
